# imhd-HPC

./: .gitignore  README.md
c/: README.md
c/data/: README.md
c/include/: rank3Tensor.h
cpp/: CMakeLists.txt  README.md
cpp/benchmarking/benchmarking-build/: bench.inp  perfstat_N128_Nt100.txt  perfstat_N256_Nt100.txt  perfstat_N64_Nt100.txt
cpp/benchmarking/benchmarking-include/: fluxFunctions-bench.hpp  imhdFluid-bench.hpp  numerics-bench.hpp  rank3Tensor-bench.hpp
cpp/benchmarking/benchmarking-src/: CMakeLists.txt  bench-main.cpp
cpp/data/: README.md  README.txt
cpp/debug/debug-build/: README.md
cpp/debug/debug-include/: fluxFunctions-debug.hpp  imhdFluid-debug.hpp  numerics-debug.hpp  rank3Tensor-debug.hpp
cpp/debug/debug-src/: CMakeLists.txt  debug-ICs.cpp  debug-main.cpp  debug-numDiff.cpp  debug-parseInputFile.cpp
cpp/include/: fluxFunctions.hpp  imhdFluid.hpp  numerics.hpp  rank3Tensor.hpp
cpp/src/: CMakeLists.txt  imhd.inp  main.cpp
cpp/test/test-src/: CMakeLists.txt  test-main.cpp
fortran/: README.md
rust/: Cargo.toml
